<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cc_til_hint_name">Nombre</string>
    <string name="cc_til_hint_email">Email</string>
    <string name="cc_til_hint_phone">Teléfono</string>
    <string name="cc_til_hint_address">Dirección</string>
    <string name="cc_til_hint_city">Ciudad</string>
    <string name="cc_btn_text_save">Guardar</string>
    <string name="cc_til_helperText">Requerido*</string>
    <string name="cc_descriptiontext_ibCustomer">Pulsa añadir una imagen</string>
    <string name="cl_tvExampleName">Mr.Onion</string>
    <string name="cl_tvExampleEmail">abc@hotmail.es</string>
    <string name="cl_tvExamplePhone">No disponible</string>
    <string name="cl_tvExampleCity">No disponible</string>
    <string name="cl_tvExampleAddress">No disponible</string>

    <string name="cd_tvName">Nombre:</string>
    <string name="cd_tvExampleName">Mr. Kiwi</string>
    <string name="cd_tvExampleEmail">abc@hotmail.es</string>
    <string name="cd_tvEmail">Correo Electrónico:</string>
    <string name="cd_tvPhone">Teléfono:</string>
    <string name="cd_tvExamplePhone">672231356</string>
    <string name="cd_tvAddress">Dirección:</string>
    <string name="cd_tvExampleAddress">Calle Salamanca Nº27 (21110)</string>
    <string name="cd_tvCity">Ciudad:</string>
    <string name="cd_tvExampleCity">Málaga</string>
</resources>