<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moronlu18.customer.ui.CustomerDetail">


    <androidx.cardview.widget.CardView
        android:id="@+id/customer_detail_cardNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/cd_radius_cv"
        app:cardElevation="@dimen/cd_cardElevation_cv"
        app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
        app:layout_constraintStart_toStartOf="@+id/customer_detailglLeft"
        app:layout_constraintTop_toBottomOf="@+id/customer_detail_ciPhoto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customer_detail_clTableA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:id="@+id/customer_detail_llName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cd_color_fondo_1"
                android:orientation="vertical"
                android:padding="@dimen/cd_LinearLayout_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/customer_detail_tvName"
                    style="@style/customer_detail_tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_tvName" />

                <TextView
                    android:id="@+id/customer_detail_tvNameCustomer"
                    style="@style/customer_detail_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/cd_tvExampleName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/customer_detail_llEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cd_color_fondo_2"
                android:orientation="vertical"
                android:padding="@dimen/cd_LinearLayout_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customer_detail_llName">

                <TextView
                    android:id="@+id/customer_detail_tvEmail"
                    style="@style/customer_detail_tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_tvEmail" />

                <TextView
                    android:id="@+id/customer_detail_tvEmailCustomer"
                    style="@style/customer_detail_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/cd_tvExampleEmail" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/customer_detail_cardLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/cd_radius_cv"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
        app:layout_constraintStart_toStartOf="@+id/customer_detailglLeft"
        app:layout_constraintTop_toBottomOf="@+id/customer_detail_cardNombre">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customer_detail_clTableB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/customer_detail_llPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cd_color_fondo_1"
                android:orientation="vertical"
                android:padding="@dimen/cd_LinearLayout_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/customer_detail_tvPhone"
                    style="@style/customer_detail_tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_tvPhone" />

                <TextView
                    android:id="@+id/customer_detail_tvPhoneCustomer"
                    style="@style/customer_detail_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/cd_tvExamplePhone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/customer_detail_llAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cd_color_fondo_2"
                android:orientation="vertical"
                android:padding="@dimen/cd_LinearLayout_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customer_detail_llPhone">

                <TextView
                    android:id="@+id/customer_detail_tvAddress"
                    style="@style/customer_detail_tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/cd_tvAddress" />

                <TextView
                    android:id="@+id/customer_detail_tvAddressCustomer"
                    style="@style/customer_detail_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_tvExampleAddress" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/customer_detail_llCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cd_color_fondo_1"
                android:orientation="vertical"
                android:padding="@dimen/cd_LinearLayout_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customer_detail_llAdress">

                <TextView
                    android:id="@+id/customer_detail_tvCity"
                    style="@style/customer_detail_tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_tvCity" />

                <TextView
                    android:id="@+id/customer_detail_tvCityName"
                    style="@style/customer_detail_tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/cd_tvExampleCity" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/customer_detail_ciPhoto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/kiwituxedo"
        app:civ_border_color="@color/seed"
        app:civ_border_width="4dp"
        app:civ_shadow="false"
        app:civ_shadow_color="#3f51b5"
        app:civ_shadow_radius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
        app:layout_constraintStart_toStartOf="@+id/customer_detailglLeft"
        app:layout_constraintTop_toTopOf="@+id/customer_detailglTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/customer_detailglRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/customer_detailglLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/customer_detailglTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/customer_detail_flbtncorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#BA99F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/customer_detailglRight"
        app:srcCompat="@drawable/ic_action_correct" />

</androidx.constraintlayout.widget.ConstraintLayout>